api/swim_form/src/tests/derive/form/incorrect_tag_type_enum.stderr
error: Expected a string literal
  --> src/tests/derive/form/incorrect_tag_type_enum.rs:20:22
   |
20 |         #[form(tag = 13)]
   |                      ^^
